finish design of signIn and signUp screens

--- a/app/src/main/res/layout/activity_reset_password_screen.xml
+++ b/app/src/main/res/layout/activity_reset_password_screen.xml
@@ -20,7 +20,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_10sdp"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
                 android:orientation="vertical">
 
                 <ImageButton
@@ -54,7 +55,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text="@string/resetPassword"
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/_20sdp"
@@ -73,36 +74,63 @@
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text="@string/resetPassword_purpose2"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="@dimen/_10sdp" />
 
                 </LinearLayout>
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/card"
+
+                <LinearLayout
+                    android:id="@+id/verifyLin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/backBtn"
-                    android:layout_margin="@dimen/_10sdp"
-                    android:backgroundTint="@color/etTextColor"
-                    app:cardCornerRadius="@dimen/_5sdp"
-                    app:cardElevation="@dimen/_6sdp">
-                    <!--
-                                    <com.bluecrunch.bluecrunchverification.VerificationView
-                                        android:id="@+id/verification_layout"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:layout_margin="@dimen/_3sdp"
-                                        app:box_background_focused="@drawable/verification_box_default_bg"
-                                        app:box_count="6"
-                                        app:box_height="@dimen/_50sdp"
-                                        app:box_space="7dp"
-                                        app:box_text_color="@android:color/black" />
-                    -->
+                    android:gravity="center"
+                    android:orientation="vertical">
 
-                </androidx.cardview.widget.CardView>
+                    <com.chaos.view.PinView
+                        android:id="@+id/firstPinView"
+                        style="@style/PinWidget.PinView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:cursorVisible="true"
+                        android:inputType="number"
+                        android:padding="@dimen/_5sdp"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/_20sdp"
+                        android:textStyle="bold"
+                        app:cursorColor="@android:color/darker_gray"
+                        app:cursorWidth="2dp"
+                        android:fontFamily="@font/cairo_semibold"
+                        app:hideLineWhenFilled="true"
+                        app:itemCount="5"
+                        app:itemHeight="@dimen/_45sdp"
+                        app:itemRadius="@dimen/_3sdp"
+                        app:itemSpacing="@dimen/_5sdp"
+                        app:itemWidth="@dimen/_45sdp"
+                        app:lineColor="@android:color/black"
+                        app:lineWidth="@dimen/_2sdp"
+                        app:viewType="rectangle" />
+
+                    <Button
+                        android:id="@+id/verifyBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/_10sdp"
+                        android:layout_marginBottom="@dimen/_10sdp"
+                        android:background="@drawable/curves_yellow_bg"
+                        android:contentDescription="@string/verify"
+                        android:paddingLeft="@dimen/_5sdp"
+                        android:paddingRight="@dimen/_5sdp"
+                        android:text="@string/verify"
+                        android:textAllCaps="false"
+                        android:fontFamily="@font/cairo_semibold"
+
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/_16sdp" />
+                </LinearLayout>
 
 
                 <LinearLayout
@@ -121,7 +149,9 @@
                         android:background="@drawable/curves_gray_bg"
                         android:drawableStart="@drawable/lock_ic"
                         android:drawablePadding="@dimen/_5sdp"
-                        android:hint="@string/password"
+                        android:hint="@string/password"                        android:fontFamily="@font/cairo_semibold"
+
+
                         android:inputType="textPassword"
                         android:padding="@dimen/_10sdp"
                         android:text=""
@@ -140,6 +170,8 @@
                         android:drawablePadding="@dimen/_5sdp"
                         android:hint="@string/confirmPassword"
                         android:inputType="textPassword"
+                        android:fontFamily="@font/cairo_semibold"
+
                         android:padding="@dimen/_10sdp"
                         android:singleLine="true"
                         android:text=""
@@ -155,7 +187,9 @@
                         android:contentDescription="@string/signIn"
                         android:text="@string/resetPassword"
                         android:textAllCaps="false"
-                        android:textColor="@android:color/white"
+                        android:fontFamily="@font/cairo_semibold"
+
+                        android:textColor="@android:color/black"
                         android:textSize="@dimen/_16sdp" />
 
 
