--- a/app/src/main/res/layout/activity_sign_up_screen.xml
+++ b/app/src/main/res/layout/activity_sign_up_screen.xml
@@ -52,14 +52,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_10sdp"
-                android:gravity="center"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"                android:gravity="center"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_10sdp"
+                    android:layout_marginBottom="@dimen/_10sdp"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -73,7 +73,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_5sdp"
-                        android:fontFamily="sans-serif"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text="@string/subscribe"
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/_20sdp"
@@ -83,7 +83,7 @@
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text="@string/subscribe_purpose1"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="@dimen/_10sdp" />
@@ -92,7 +92,7 @@
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text="@string/subscribe_purpose2"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="@dimen/_10sdp" />
@@ -103,7 +103,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
-                    android:fontFamily="sans-serif"
+                    android:fontFamily="@font/cairo_semibold"
                     android:text="@string/name_purpose"
                     android:textColor="@android:color/darker_gray"
                     android:textSize="@dimen/_10sdp" />
@@ -120,7 +120,6 @@
                     android:hint="@string/firstName"
                     android:inputType="text"
                     android:maxEms="30"
-
                     android:maxLength="30"
                     android:padding="@dimen/_10sdp"
                     android:singleLine="true"
@@ -173,17 +172,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
-                    android:fontFamily="sans-serif"
+                    android:fontFamily="@font/cairo_semibold"
                     android:text="@string/email_purpose"
                     android:textColor="@android:color/darker_gray"
                     android:textSize="@dimen/_10sdp" />
 
                 <EditText
                     android:id="@+id/email"
-
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:autofillHints="@string/email"
                     android:background="@drawable/curves_gray_bg"
@@ -196,6 +193,24 @@
                     android:textColor="@color/etTextColor"
                     android:textSize="@dimen/_14sdp" />
 
+
+                <EditText
+                    android:id="@+id/phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/_10sdp"
+                    android:autofillHints="@string/phone"
+                    android:background="@drawable/curves_gray_bg"
+                    android:drawableStart="@drawable/phone_ic"
+                    android:drawablePadding="@dimen/_5sdp"
+                    android:hint="@string/phone"
+                    android:inputType="phone"
+                    android:maxEms="11"
+                    android:maxLength="11"
+                    android:padding="@dimen/_10sdp"
+                    android:text=""
+                    android:textColor="@color/etTextColor"
+                    android:textSize="@dimen/_14sdp" />
 
                 <EditText
                     android:id="@+id/id"
@@ -228,7 +243,7 @@
                         android:layout_height="@dimen/_120sdp"
                         android:layout_gravity="start"
                         android:background="@android:color/darker_gray"
-                        android:padding="@dimen/_30sdp"
+                        android:padding="@dimen/_40sdp"
                         android:scaleType="fitCenter"
                         android:src="@drawable/add_img_gray_ic" />
 
@@ -237,31 +252,39 @@
 
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_5sdp"
-                        android:fontFamily="sans-serif"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text="@string/card_purpose"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="@dimen/_10sdp" />
 
                     <Button
+
                         android:id="@+id/addCardBtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="@string/uploadCard"
-                        android:textAllCaps="false" />
+                        android:background="@drawable/curves_yellow_bg"
+                        android:contentDescription="@string/signUp"
+                        android:fontFamily="@font/cairo_semibold"
+                        android:padding="@dimen/_7sdp"                        android:text="@string/uploadCard"
+                        android:textAllCaps="false"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/_14sdp"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
 
                 <TextView
-                    android:id="@+id/emailError"
+                    android:gravity="center"
+                    android:id="@+id/error"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/_10sdp"
-                    android:fontFamily="sans-serif"
-                    android:text="@string/emailDoseNotExist"
+                    android:fontFamily="@font/cairo_semibold"
+                    android:text="Error"
                     android:textColor="@android:color/holo_red_light"
                     android:textSize="@dimen/_10sdp"
-                    android:visibility="invisible" />
+                    android:visibility="visible" />
 
                 <Button
                     android:id="@+id/signUpBtn"
@@ -270,7 +293,7 @@
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:background="@drawable/curves_yellow_bg"
                     android:contentDescription="@string/signUp"
-                    android:fontFamily="@font/actor"
+                    android:fontFamily="@font/cairo_semibold"
                     android:padding="@dimen/_7sdp"
                     android:text="@string/signUp"
                     android:textAllCaps="false"
