--- a/app/src/main/res/layout/activity_forget_password_screen.xml
+++ b/app/src/main/res/layout/activity_forget_password_screen.xml
@@ -19,6 +19,7 @@
             android:layout_height="match_parent">
 
             <LinearLayout
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -47,7 +48,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_10sdp"
+                    android:layout_marginStart="@dimen/_20sdp"
+                    android:layout_marginEnd="@dimen/_20sdp"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -63,7 +65,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_5sdp"
-                        android:fontFamily="sans-serif"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text="@string/forgetPassword"
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/_20sdp"
@@ -73,7 +75,7 @@
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text="@string/forgetPassword_purpose1"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="@dimen/_10sdp" />
@@ -82,62 +84,64 @@
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text="@string/forgetPassword_purpose2"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="@dimen/_10sdp" />
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:paddingTop="@dimen/_10sdp">
+
+
+                        <EditText
+                            android:drawableStart="@drawable/email_ic"
+                            android:drawablePadding="@dimen/_5sdp"
+                            android:id="@+id/email"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/_10sdp"
+                            android:autofillHints="@string/email"
+                            android:background="@drawable/curves_gray_bg"
+                            android:hint="@string/email"
+                            android:fontFamily="@font/cairo_semibold"
+                            android:inputType="textEmailAddress"
+                            android:padding="@dimen/_10sdp"
+                            android:text=""
+                            android:textColor="@color/etTextColor"
+                            android:textSize="@dimen/_14sdp" />
+
+                        <TextView
+                            android:id="@+id/emailError"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/_10sdp"
+                            android:fontFamily="sans-serif"
+                            android:text="@string/emailDoseNotExist"
+                            android:textColor="@android:color/holo_red_light"
+                            android:textSize="@dimen/_10sdp"
+                            android:visibility="invisible" />
+
+
+                        <Button
+                            android:fontFamily="@font/cairo_semibold"
+
+                            android:id="@+id/forgetPasswordBtn"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/curves_yellow_bg"
+                            android:contentDescription="@string/sendCode"
+                            android:text="@string/sendCode"
+                            android:textAllCaps="false"
+                            android:textColor="@android:color/black"
+                            android:textSize="@dimen/_16sdp" />
+
+                    </LinearLayout>
+
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_15sdp"
-                    android:layout_marginEnd="@dimen/_15sdp"
-                    android:orientation="vertical"
-                    android:paddingTop="@dimen/_10sdp">
-
-
-                    <EditText
-                        android:drawableStart="@drawable/email_ic"
-                        android:drawablePadding="@dimen/_5sdp"
-                        android:id="@+id/email"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/_10sdp"
-                        android:autofillHints="@string/email"
-                        android:background="@drawable/curves_gray_bg"
-                        android:hint="@string/email"
-                        android:inputType="textEmailAddress"
-                        android:padding="@dimen/_10sdp"
-                        android:text=""
-                        android:textColor="@color/etTextColor"
-                        android:textSize="@dimen/_14sdp" />
-
-                    <TextView
-                        android:id="@+id/emailError"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/_10sdp"
-                        android:fontFamily="sans-serif"
-                        android:text="@string/emailDoseNotExist"
-                        android:textColor="@android:color/holo_red_light"
-                        android:textSize="@dimen/_10sdp"
-                        android:visibility="invisible" />
-
-
-                    <Button
-                        android:id="@+id/forgetPasswordBtn"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/curves_yellow_bg"
-                        android:contentDescription="@string/sendCode"
-                        android:text="@string/sendCode"
-                        android:textAllCaps="false"
-                        android:textColor="@android:color/white"
-                        android:textSize="@dimen/_16sdp" />
-
-                </LinearLayout>
 
             </LinearLayout>
 
