--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -8,7 +8,7 @@
     </data>
 
     <RelativeLayout
-        android:id="@+id/map_container"
+        android:id="@+id/mainLin"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -32,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
+            android:layout_alignParentLeft="true"
             android:layout_margin="@dimen/_10sdp"
             android:background="@mipmap/back_btn_ic"
             android:contentDescription="@string/backBtn" />
@@ -68,7 +69,7 @@
                 android:padding="@dimen/_5sdp"
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:visibility="gone"
-                android:fontFamily="sans-serif"
+                android:fontFamily="@font/cairo_semibold"
                 android:id="@+id/addressTv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -88,13 +89,14 @@
                 android:layout_marginBottom="@dimen/_10sdp" />
 
             <Button
+                android:visibility="gone"
                 android:id="@+id/saveBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/curves_yellow_bg"
                 android:contentDescription="@string/next"
                 android:text="@string/save"
-                android:textStyle="bold"
+                android:fontFamily="@font/cairo_semibold"
                 android:textAllCaps="false"
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/_16sdp" />
