--- a/app/src/main/res/layout/activity_sign_in_screen.xml
+++ b/app/src/main/res/layout/activity_sign_in_screen.xml
@@ -11,7 +11,7 @@
         android:id="@+id/mainLin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/start_bg"
+        android:background="@drawable/background"
         tools:context=".ui.start.signIn.mainSignIn.SignInScreen">
 
 
@@ -49,15 +49,16 @@
                     android:orientation="vertical"
                     android:padding="@dimen/_10sdp">
                     <TextView
+                        android:gravity="center"
                         android:id="@+id/emailError"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_10sdp"
-                        android:fontFamily="sans-serif"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text="@string/emailDoseNotExist"
                         android:textColor="@android:color/holo_red_light"
                         android:textSize="@dimen/_10sdp"
-                        android:visibility="invisible" />
+                        android:visibility="visible" />
 
                     <EditText
                         android:drawablePadding="@dimen/_5sdp"
@@ -71,6 +72,7 @@
                         android:hint="@string/id"
                         android:inputType="number"
                         android:padding="@dimen/_10sdp"
+                        android:fontFamily="@font/cairo_semibold"
                         android:singleLine="true"
                         android:text=""
                         android:textColor="@color/etTextColor"
@@ -88,6 +90,7 @@
                         android:inputType="textPassword"
                         android:padding="@dimen/_10sdp"
                         android:singleLine="true"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text=""
                         android:textColor="@color/etTextColor"
                         android:textSize="@dimen/_14sdp" />
@@ -100,8 +103,7 @@
                         android:layout_gravity="end"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginBottom="@dimen/_10sdp"
-
-                        android:fontFamily="@font/actor"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text="@string/doForgetPassword"
                         android:textAllCaps="false"
                         android:textColor="@android:color/black"
@@ -114,7 +116,7 @@
                         android:layout_marginBottom="@dimen/_10sdp"
                         android:background="@drawable/curves_yellow_bg"
                         android:contentDescription="@string/signIn"
-                        android:fontFamily="@font/actor"
+                        android:fontFamily="@font/cairo_semibold"
                         android:padding="@dimen/_7sdp"
                         android:text="@string/signIn"
                         android:textAllCaps="false"
@@ -133,7 +135,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/actor"
+                            android:fontFamily="@font/cairo_semibold"
                             android:text="@string/dontHaveAnAcc"
                             android:textAllCaps="false"
                             android:textColor="@android:color/darker_gray"
@@ -145,7 +147,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/_5sdp"
                             android:layout_marginEnd="@dimen/_5sdp"
-                            android:fontFamily="@font/actor"
+                            android:fontFamily="@font/cairo_semibold"
                             android:text="@string/signUp"
                             android:textAllCaps="false"
                             android:textColor="@android:color/black"
@@ -169,9 +171,9 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_margin="@dimen/_10sdp"
-            android:fontFamily="sans-serif"
+            android:fontFamily="@font/cairo_semibold"
             android:text="@string/termsAndConditions"
-            android:textColor="@android:color/darker_gray"
+            android:textColor="@android:color/black"
             android:textSize="@dimen/_10sdp" />
 
         <ImageButton
