--- a/app/src/main/res/layout/fragment_add_image.xml
+++ b/app/src/main/res/layout/fragment_add_image.xml
@@ -36,7 +36,7 @@
 
                     <ImageView
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_250sdp"
+                        android:layout_height="@dimen/_200sdp"
                         android:contentDescription="@string/logo"
                         android:scaleType="fitCenter"
                         app:srcCompat="@drawable/add_img_pic"
@@ -46,29 +46,29 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_5sdp"
-                        android:fontFamily="sans-serif"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text="@string/addYourProfilePic"
                         android:textColor="@android:color/black"
-                        android:textSize="@dimen/_20sdp"
+                        android:textSize="26sp"
                         android:textStyle="bold" />
 
                     <TextView
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text="@string/addYourProfilePic_purpose1"
                         android:textColor="@android:color/darker_gray"
-                        android:textSize="@dimen/_10sdp" />
+                        android:textSize="13sp" />
 
                     <TextView
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text="@string/addYourProfilePic_purpose2"
                         android:textColor="@android:color/darker_gray"
-                        android:textSize="@dimen/_10sdp" />
+                        android:textSize="13sp" />
 
                 </LinearLayout>
 
@@ -88,9 +88,9 @@
                         android:id="@+id/lawyerImg"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@android:color/transparent"
+                        android:background="@android:color/darker_gray"
                         android:contentDescription="@string/logo"
-                        android:padding="@dimen/_40sdp"
+                        android:padding="@dimen/_50sdp"
                         android:src="@drawable/add_img_gray_ic" />
 
                 </androidx.cardview.widget.CardView>
@@ -99,35 +99,104 @@
                     android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif"
+                    android:layout_marginBottom="@dimen/_10sdp"
+                    android:fontFamily="@font/cairo_semibold"
                     android:text="المستشار / عبد الغنى محمد عبدالحكم اسماعيل فؤاد"
                     android:textColor="@android:color/black"
-                    android:textSize="@dimen/_14sdp"
+                    android:textSize="@dimen/_12sdp"
+
                     android:textStyle="bold" />
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="@dimen/_10sdp"
-                    android:elevation="@dimen/_100sdp"
-                    android:focusable="true"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    app:cardCornerRadius="@dimen/_4sdp">
 
-                    <com.jaredrummler.materialspinner.MaterialSpinner
-                        android:id="@+id/spinner"
+                <TextView
+                    android:id="@+id/phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/_10sdp"
+                    android:autofillHints="@string/phone"
+                    android:drawableStart="@drawable/phone_ic"
+                    android:drawablePadding="@dimen/_5sdp"
+                    android:hint="@string/phone"
+                    android:inputType="phone"
+                    android:maxEms="11"
+                    android:layout_gravity="start"
+                    android:maxLength="11"                        android:fontFamily="@font/cairo_semibold"
+
+
+                    android:padding="@dimen/_10sdp"
+                    android:text="01124948662"
+                    android:backgroundTint="@android:color/white"
+                    android:textColor="@color/etTextColor"
+                    android:textSize="@dimen/_14sdp" />
+
+
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/actor"
-                        android:hint="@string/selectYourSpecialty"
-                        android:textSize="@dimen/_14sdp"
-                        android:textStyle="bold"
-                        app:ms_arrow_tint="@android:color/black"
-                        app:ms_hint="@string/selectYourSpecialty"
-                        app:ms_text_color="@android:color/black" />
+                        android:layout_marginBottom="@dimen/_10sdp"
+                        android:orientation="vertical"
+                        android:padding="@dimen/_5sdp">
 
-                </androidx.cardview.widget.CardView>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/cairo_semibold"
+                            android:text="@string/selectYourSpecialty"
+                            android:textColor="@android:color/black"
+                            android:textSize="@dimen/_14sdp"
+                            android:textStyle="bold" />
+
+                        <androidx.appcompat.widget.AppCompatCheckBox
+                            android:id="@+id/mercedesCB"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="@dimen/_2sdp"
+                            android:fontFamily="@font/cairo_semibold"
+                            android:paddingLeft="@dimen/_3sdp"
+                            android:text=""
+                            android:textColor="@android:color/black"
+                            android:textSize="@dimen/_14sdp"
+                            android:textStyle="bold" />
+
+                        <androidx.appcompat.widget.AppCompatCheckBox
+                            android:id="@+id/bmwCB"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="@dimen/_2sdp"
+                            android:fontFamily="@font/cairo_semibold"
+                            android:paddingLeft="@dimen/_3sdp"
+                            android:text=""
+                            android:textColor="@android:color/black"
+                            android:textSize="@dimen/_14sdp"
+                            android:textStyle="bold" />
+
+                        <androidx.appcompat.widget.AppCompatCheckBox
+                            android:id="@+id/chevroletCB"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="@dimen/_2sdp"
+                            android:fontFamily="@font/cairo_semibold"
+                            android:paddingLeft="@dimen/_3sdp"
+                            android:text=""
+                            android:textColor="@android:color/black"
+                            android:textSize="@dimen/_14sdp"
+                            android:textStyle="bold" />
+
+                        <androidx.appcompat.widget.AppCompatCheckBox
+                            android:id="@+id/loganCB"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="@dimen/_2sdp"
+                            android:fontFamily="@font/cairo_semibold"
+                            android:paddingLeft="@dimen/_3sdp"
+                            android:text=""
+                            android:textColor="@android:color/black"
+                            android:textSize="@dimen/_14sdp"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+
 
 
                 <EditText
@@ -136,11 +205,14 @@
                     android:layout_height="@dimen/_120sdp"
                     android:autofillHints="@string/address"
                     android:background="@drawable/curves_gray_bg"
+                    android:drawableStart="@drawable/info_ic"
+                    android:drawablePadding="@dimen/_5sdp"
                     android:foregroundGravity="top"
                     android:gravity="top"
                     android:hint="@string/briefSummary"
                     android:inputType="textMultiLine"
                     android:maxEms="300"
+                    android:fontFamily="@font/cairo_semibold"
                     android:maxLength="300"
                     android:padding="@dimen/_10sdp"
                     android:scrollbarStyle="insideOverlay"
@@ -155,8 +227,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
-                    android:fontFamily="sans-serif"
-                    android:paddingStart="@dimen/_5sdp"
+                    android:fontFamily="@font/cairo_semibold"
                     android:text="@string/max"
                     android:textColor="@android:color/darker_gray"
                     android:textSize="@dimen/_10sdp" />
@@ -170,6 +241,7 @@
                     android:background="@drawable/curves_yellow_bg"
                     android:contentDescription="@string/next"
                     android:text="@string/next"
+                    android:fontFamily="@font/cairo_semibold"
                     android:textAllCaps="false"
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/_16sdp"
