--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -22,13 +22,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_10sdp"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
+
                 android:orientation="vertical">
 
 
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_250sdp"
+                    android:layout_height="@dimen/_200sdp"
                     android:contentDescription="@string/logo"
                     android:scaleType="fitCenter"
                     app:srcCompat="@drawable/change_pass_pic"
@@ -39,6 +41,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/_10sdp"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -46,7 +49,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_5sdp"
-                        android:fontFamily="sans-serif"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text="@string/changePassword"
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/_20sdp"
@@ -56,7 +59,7 @@
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text="@string/changePassword_purpose1"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="@dimen/_10sdp" />
@@ -65,7 +68,7 @@
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text="@string/changePassword_purpose2"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="@dimen/_10sdp" />
@@ -75,19 +78,20 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_10sdp"
                     android:orientation="vertical">
 
 
                     <EditText
-                        android:drawableStart="@drawable/lock_ic"
-                        android:drawablePadding="@dimen/_5sdp"
                         android:id="@+id/Password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_15sdp"
                         android:autofillHints="@string/password"
                         android:background="@drawable/curves_gray_bg"
+                        android:drawableStart="@drawable/lock_ic"
+                        android:drawablePadding="@dimen/_5sdp"
+
+                        android:fontFamily="@font/cairo_semibold"
                         android:hint="@string/password"
                         android:inputType="textPassword"
                         android:padding="@dimen/_10sdp"
@@ -96,14 +100,16 @@
                         android:textSize="@dimen/_14sdp" />
 
                     <EditText
-                        android:drawableStart="@drawable/lock_ic"
-                        android:drawablePadding="@dimen/_5sdp"
                         android:id="@+id/confirmPassword"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_15sdp"
                         android:autofillHints="@string/confirmPassword"
                         android:background="@drawable/curves_gray_bg"
+                        android:drawableStart="@drawable/lock_ic"
+                        android:drawablePadding="@dimen/_5sdp"
+
+                        android:fontFamily="@font/cairo_semibold"
                         android:hint="@string/confirmPassword"
                         android:inputType="textPassword"
                         android:padding="@dimen/_10sdp"
@@ -119,11 +125,13 @@
                         android:layout_marginBottom="@dimen/_10sdp"
                         android:background="@drawable/curves_yellow_bg"
                         android:contentDescription="@string/signIn"
+                        android:fontFamily="@font/cairo_semibold"
                         android:text="@string/next"
                         android:textAllCaps="false"
-                        android:textStyle="bold"
+
                         android:textColor="@android:color/black"
-                        android:textSize="@dimen/_16sdp" />
+                        android:textSize="@dimen/_16sdp"
+                        android:textStyle="bold" />
 
 
                 </LinearLayout>
