--- a/app/src/main/res/layout/activity_sign_in_screen.xml
+++ b/app/src/main/res/layout/activity_sign_in_screen.xml
@@ -66,17 +66,15 @@
                         android:padding="@dimen/_10sdp">
 
                         <TextView
-                            android:id="@+id/emailError"
+                            android:id="@+id/error"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/_10sdp"
                             android:fontFamily="@font/cairo_semibold"
                             android:gravity="center"
-                            android:text="@string/emailDoseNotExist"
                             android:textColor="@android:color/holo_red_light"
                             android:textSize="@dimen/_10sdp"
-                            android:visibility="visible" />
-
+/>
                         <EditText
                             android:id="@+id/id"
                             android:layout_width="match_parent"
