--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -15,15 +15,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
-
-
-
-
-
-
-
 
 
         <FrameLayout
@@ -102,21 +95,24 @@
                         <LinearLayout
 
                             android:id="@+id/title_appbar"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:clickable="false"
                             android:orientation="vertical"
                             android:visibility="invisible">
 
                             <TextView
+                                android:gravity="center"
                                 android:id="@+id/dayToolbar"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:maxLines="1"
                                 android:singleLine="true"
-                                android:text=""
-                                android:textColor="@android:color/white"
-                                android:textSize="@dimen/_13sdp" />
+                                
+                                android:fontFamily="@font/cairo_semibold"
+                                android:text="kjkjkjkjkjkj"
+                                android:textColor="@android:color/black"
+                                android:textSize="@dimen/_14sdp" />
 
 
                         </LinearLayout>
