finish api accountInfo

--- a/app/src/main/res/layout/activity_forget_password_screen.xml
+++ b/app/src/main/res/layout/activity_forget_password_screen.xml
@@ -106,13 +106,12 @@
                             android:textSize="@dimen/_14sdp" />
 
                         <TextView
-                            android:id="@+id/emailError"
+                            android:id="@+id/error"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/_10sdp"
                             android:fontFamily="@font/cairo_semibold"
                             android:gravity="center"
-                            android:text="@string/emailDoseNotExist"
                             android:textColor="@android:color/holo_red_light"
                             android:textSize="@dimen/_10sdp"
                             android:visibility="visible" />
