--- a/app/src/main/res/layout/fragment_favorite_news.xml
+++ b/app/src/main/res/layout/fragment_favorite_news.xml
@@ -1,45 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mainLin"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/transparent"
-    tools:context=".ui.home.fragment.news.fragment.favorite.FavoriteNewsFragment">
+    <data>
 
-    <androidx.core.widget.NestedScrollView
+    </data>
+
+    <RelativeLayout
+        android:id="@+id/mainLin"
+
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@android:color/transparent"
+        tools:context=".ui.home.fragment.news.fragment.favorite.FavoriteNewsFragment">
 
-        <LinearLayout
-            android:id="@+id/lin"
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipe"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <include
-                layout="@layout/news_item_model"
-                android:id="@+id/newsItem" />
-
-            <include layout="@layout/news_item_model" />
-
-            <include layout="@layout/news_item_model" />
-
-            <include layout="@layout/news_item_model" />
-
-            <include layout="@layout/news_item_model" />
-
-            <include layout="@layout/news_item_model" />
-
-            <include layout="@layout/news_item_model" />
-
-
-        </LinearLayout>
-
-
-    </androidx.core.widget.NestedScrollView>
+            android:layout_height="match_parent">
 
 
 
-</RelativeLayout>
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/favNewsRV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+
+
+        </androidx.core.widget.NestedScrollView>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
+    </RelativeLayout>
+</layout>
