--- a/app/src/main/res/layout/activity_news_details_screen.xml
+++ b/app/src/main/res/layout/activity_news_details_screen.xml
@@ -60,18 +60,18 @@
                     android:fontFamily="@font/cairo_semibold"
                     android:gravity="start"
                     android:padding="@dimen/_2sdp"
-                    android:text=" بعد اعتراضات كبيرة.. الحكومة الفرنسية تسعى إلى تعديل مقترح قانون الأمن الشامل "
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/_14sdp"
                     android:textStyle="bold" />
 
                 <ImageView
+                    android:scaleType="fitXY"
                     android:id="@+id/newsImg"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_200sdp"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:layout_marginBottom="@dimen/_10sdp"
-                    android:src="@android:color/holo_green_dark" />
+             />
 
 
                 <TextView
@@ -82,7 +82,6 @@
                     android:fontFamily="@font/cairo_semibold"
                     android:gravity="start"
                     android:padding="@dimen/_2sdp"
-                    android:text=" اقترح وزير الداخلية الفرنسي جيرالد دارمانين، الخميس، إدراج تعديل يضمن حرية الصحافة في قانون الأمن الشامل المقترح والذي تم بحثه في الجمعية الوطنية بحسب ما أعلن عنه مصدر في دائرة الوزير ومن المنتظر أن يحضر الاجتماع كريستوف كاستانير، وزير الداخلية السابق والذي يشغل حاليا منصب رئيس مجموعة الجمهورية إلى الأمام، الحزب الحاكم، في الجمعية الوطنية ويائيل براون بيفيه، رئيسة لجنة القوانين في المجلس وباتريك مينيولا، رئيس مجموعة حزب مودام في الجمعية المؤيد للحزب الحاكم. ومن المنتظر أن يحضر الاجتماع كريستوف كاستانير، وزير الداخلية السابق والذي يشغل حاليا منصب رئيس مجموعة الجمهورية إلى الأمام، الحزب الحاكم، في الجمعية الوطنية ويائيل براون بيفيه، رئيسة لجنة القوانين في المجلس وباتريك مينيولا، رئيس مجموعة حزب مودام في الجمعية المؤيد للحزب الحاكم. ومن المنتظر أن يحضر الاجتماع كريستوف كاستانير، وزير الداخلية السابق والذي يشغل حاليا منصب رئيس مجموعة الجمهورية إلى الأمام، الحزب الحاكم، في الجمعية الوطنية ويائيل براون بيفيه، رئيسة لجنة القوانين في المجلس وباتريك مينيولا، رئيس مجموعة حزب مودام في الجمعية المؤيد للحزب الحاكم. ومن المنتظر أن يحضر الاجتماع كريستوف كاستانير، وزير الداخلية السابق والذي يشغل حاليا منصب رئيس مجموعة الجمهورية إلى الأمام، الحزب الحاكم، في الجمعية الوطنية ويائيل براون بيفيه، رئيسة لجنة القوانين في المجلس وباتريك مينيولا، رئيس مجموعة حزب مودام في الجمعية المؤيد للحزب الحاكم. ومن المنتظر أن يحضر الاجتماع كريستوف كاستانير، وزير الداخلية السابق والذي يشغل حاليا منصب رئيس مجموعة الجمهورية إلى الأمام، الحزب الحاكم، في الجمعية الوطنية ويائيل براون بيفيه، رئيسة لجنة القوانين في المجلس وباتريك مينيولا، رئيس مجموعة حزب مودام في الجمعية المؤيد للحزب الحاكم. ومن المنتظر أن يحضر الاجتماع كريستوف كاستانير، وزير الداخلية السابق والذي يشغل حاليا منصب رئيس مجموعة الجمهورية إلى الأمام، الحزب الحاكم، في الجمعية الوطنية ويائيل براون بيفيه، رئيسة لجنة القوانين في المجلس وباتريك مينيولا، رئيس مجموعة حزب مودام في الجمعية المؤيد للحزب الحاكم. ومن المنتظر أن يحضر الاجتماع كريستوف كاستانير، وزير الداخلية السابق والذي يشغل حاليا منصب رئيس مجموعة الجمهورية إلى الأمام، الحزب الحاكم، في الجمعية الوطنية ويائيل براون بيفيه، رئيسة لجنة القوانين في المجلس وباتريك مينيولا، رئيس مجموعة حزب مودام في الجمعية المؤيد للحزب الحاكم. ومن المنتظر أن يحضر الاجتماع كريستوف كاستانير، وزير الداخلية السابق والذي يشغل حاليا منصب رئيس مجموعة الجمهورية إلى الأمام، الحزب الحاكم، في الجمعية الوطنية ويائيل براون بيفيه، رئيسة لجنة القوانين في المجلس وباتريك مينيولا، رئيس مجموعة حزب مودام في الجمعية المؤيد للحزب الحاكم."
                     android:textColor="@color/etTextColor"
                     android:textSize="@dimen/_12sdp"
 
@@ -117,7 +116,6 @@
                         android:fontFamily="@font/cairo_semibold"
                         android:gravity="start"
                         android:padding="@dimen/_2sdp"
-                        android:text="محاميك"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="@dimen/_10sdp"
                         android:textStyle="bold" />
@@ -151,7 +149,6 @@
                         android:fontFamily="@font/cairo_semibold"
                         android:gravity="start"
                         android:padding="@dimen/_2sdp"
-                        android:text="12-12-2020 01:30 pm"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="@dimen/_10sdp"
                         android:textStyle="bold" />
