--- a/app/src/main/res/layout/activity_reset_password_screen.xml
+++ b/app/src/main/res/layout/activity_reset_password_screen.xml
@@ -53,163 +53,218 @@
                     </ImageView>
 
                     <LinearLayout
+                        android:id="@+id/codeLin"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
+                        android:visibility="visible"
                         android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/cairo_semibold"
-                            android:text="@string/resetPassword"
-                            android:textColor="@android:color/black"
-                            android:textSize="@dimen/_20sdp"
-                            android:textStyle="bold" />
+                            android:gravity="center"
+                            android:orientation="vertical">
 
-                        <TextView
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/cairo_semibold"
+                                android:text="@string/resetPassword"
+                                android:textColor="@android:color/black"
+                                android:textSize="@dimen/_20sdp"
+                                android:textStyle="bold" />
 
-                            android:layout_width="wrap_content"
+                            <TextView
+
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/cairo_semibold"
+                                android:text="@string/resetPassword_purpose1"
+                                android:textColor="@android:color/darker_gray"
+                                android:textSize="@dimen/_10sdp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="@dimen/_10sdp"
+                                android:fontFamily="@font/cairo_semibold"
+                                android:text="@string/resetPassword_purpose2"
+                                android:textColor="@android:color/darker_gray"
+                                android:textSize="@dimen/_10sdp" />
+
+                        </LinearLayout>
+
+
+                        <LinearLayout
+                            android:id="@+id/verifyLin"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="sans-serif"
-                            android:text="@string/resetPassword_purpose1"
-                            android:textColor="@android:color/darker_gray"
-                            android:textSize="@dimen/_10sdp" />
+                            android:gravity="center"
+                            android:orientation="vertical">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/_10sdp"
-                            android:fontFamily="@font/cairo_semibold"
-                            android:text="@string/resetPassword_purpose2"
-                            android:textColor="@android:color/darker_gray"
-                            android:textSize="@dimen/_10sdp" />
+                            <com.chaos.view.PinView
+                                android:id="@+id/firstPinView"
+                                style="@style/PinWidget.PinView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:cursorVisible="true"
+                                android:fontFamily="@font/cairo_semibold"
+                                android:inputType="number"
+                                android:padding="@dimen/_5sdp"
+                                android:textColor="@android:color/black"
+                                android:textSize="@dimen/_20sdp"
+                                android:textStyle="bold"
+                                app:cursorColor="@android:color/darker_gray"
+                                app:cursorWidth="2dp"
+                                app:hideLineWhenFilled="true"
+                                app:itemCount="5"
+                                app:itemHeight="@dimen/_45sdp"
+                                app:itemRadius="@dimen/_3sdp"
+                                app:itemSpacing="@dimen/_5sdp"
+                                app:itemWidth="@dimen/_45sdp"
+                                app:lineColor="@android:color/black"
+                                app:lineWidth="@dimen/_2sdp"
+                                app:viewType="rectangle" />
+                            <LinearLayout
+                                android:id="@+id/signUpLin"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="@dimen/_10sdp"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/cairo_semibold"
+                                    android:text="@string/dontReceiveTheCode"
+                                    android:textAllCaps="false"
+                                    android:textColor="@android:color/darker_gray"
+                                    android:textSize="@dimen/_12sdp" />
+
+                                <TextView
+                                    android:id="@+id/resendBtn"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="@dimen/_5sdp"
+                                    android:layout_marginEnd="@dimen/_5sdp"
+                                    android:fontFamily="@font/cairo_semibold"
+                                    android:text="@string/resendCode"
+                                    android:textAllCaps="false"
+                                    android:textColor="@android:color/holo_red_light"
+                                    android:textSize="@dimen/_14sdp"
+                                    android:textStyle="bold" />
+                            </LinearLayout>
+                            <TextView
+                                android:id="@+id/codeError"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/cairo_semibold"
+                                android:gravity="center"
+                                android:textColor="@android:color/holo_red_light"
+                                android:textSize="@dimen/_10sdp"
+                                android:visibility="visible" />
+                            <Button
+                                android:id="@+id/verifyBtn"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="@dimen/_10sdp"
+                                android:layout_marginBottom="@dimen/_10sdp"
+                                android:background="@drawable/curves_yellow_bg"
+                                android:contentDescription="@string/verify"
+                                android:fontFamily="@font/cairo_semibold"
+                                android:paddingLeft="@dimen/_5sdp"
+                                android:paddingRight="@dimen/_5sdp"
+                                android:text="@string/verify"
+                                android:textAllCaps="false"
+
+                                android:textColor="@android:color/black"
+                                android:textSize="@dimen/_16sdp" />
+                        </LinearLayout>
 
                     </LinearLayout>
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:visibility="gone">
 
-                    <LinearLayout
-                        android:id="@+id/verifyLin"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="vertical">
+    <TextView
+        android:id="@+id/passwordError"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_10sdp"
+        android:fontFamily="@font/cairo_semibold"
+        android:gravity="center"
+        android:text="@string/emailDoseNotExist"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/_10sdp"
+        android:visibility="visible" />
 
-                        <com.chaos.view.PinView
-                            android:id="@+id/firstPinView"
-                            style="@style/PinWidget.PinView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:cursorVisible="true"
-                            android:fontFamily="@font/cairo_semibold"
-                            android:inputType="number"
-                            android:padding="@dimen/_5sdp"
-                            android:textColor="@android:color/black"
-                            android:textSize="@dimen/_20sdp"
-                            android:textStyle="bold"
-                            app:cursorColor="@android:color/darker_gray"
-                            app:cursorWidth="2dp"
-                            app:hideLineWhenFilled="true"
-                            app:itemCount="5"
-                            app:itemHeight="@dimen/_45sdp"
-                            app:itemRadius="@dimen/_3sdp"
-                            app:itemSpacing="@dimen/_5sdp"
-                            app:itemWidth="@dimen/_45sdp"
-                            app:lineColor="@android:color/black"
-                            app:lineWidth="@dimen/_2sdp"
-                            app:viewType="rectangle" />
-
-                        <Button
-                            android:id="@+id/verifyBtn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="@dimen/_10sdp"
-                            android:layout_marginBottom="@dimen/_10sdp"
-                            android:background="@drawable/curves_yellow_bg"
-                            android:contentDescription="@string/verify"
-                            android:fontFamily="@font/cairo_semibold"
-                            android:paddingLeft="@dimen/_5sdp"
-                            android:paddingRight="@dimen/_5sdp"
-                            android:text="@string/verify"
-                            android:textAllCaps="false"
-
-                            android:textColor="@android:color/black"
-                            android:textSize="@dimen/_16sdp" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/emailError"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/_10sdp"
-                        android:fontFamily="@font/cairo_semibold"
-                        android:gravity="center"
-                        android:text="@string/emailDoseNotExist"
-                        android:textColor="@android:color/holo_red_light"
-                        android:textSize="@dimen/_10sdp"
-                        android:visibility="visible" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
 
-                        <EditText
-                            android:id="@+id/Password"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/_10sdp"
-                            android:autofillHints="@string/password"
-                            android:background="@drawable/curves_gray_bg"
-                            android:drawableStart="@drawable/lock_ic"
-                            android:drawablePadding="@dimen/_5sdp"
-                            android:fontFamily="@font/cairo_semibold"
-                            android:hint="@string/password"
+        <EditText
+            android:id="@+id/Password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:autofillHints="@string/password"
+            android:background="@drawable/curves_gray_bg"
+            android:drawableStart="@drawable/lock_ic"
+            android:drawablePadding="@dimen/_5sdp"
+            android:fontFamily="@font/cairo_semibold"
+            android:hint="@string/password"
 
 
-                            android:inputType="textPassword"
-                            android:padding="@dimen/_10sdp"
-                            android:text=""
-                            android:textColor="@color/etTextColor"
-                            android:textSize="@dimen/_14sdp" />
+            android:inputType="textPassword"
+            android:padding="@dimen/_10sdp"
+            android:text=""
+            android:textColor="@color/etTextColor"
+            android:textSize="@dimen/_14sdp" />
 
-                        <EditText
-                            android:id="@+id/confirmPassword"
-                            android:layout_width="match_parent"
+        <EditText
+            android:id="@+id/confirmPassword"
+            android:layout_width="match_parent"
 
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/_10sdp"
-                            android:autofillHints="@string/confirmPassword"
-                            android:background="@drawable/curves_gray_bg"
-                            android:drawableStart="@drawable/lock_ic"
-                            android:drawablePadding="@dimen/_5sdp"
-                            android:fontFamily="@font/cairo_semibold"
-                            android:hint="@string/confirmPassword"
-                            android:inputType="textPassword"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:autofillHints="@string/confirmPassword"
+            android:background="@drawable/curves_gray_bg"
+            android:drawableStart="@drawable/lock_ic"
+            android:drawablePadding="@dimen/_5sdp"
+            android:fontFamily="@font/cairo_semibold"
+            android:hint="@string/confirmPassword"
+            android:inputType="textPassword"
 
-                            android:padding="@dimen/_10sdp"
-                            android:singleLine="true"
-                            android:text=""
-                            android:textColor="@color/etTextColor"
-                            android:textSize="@dimen/_14sdp" />
+            android:padding="@dimen/_10sdp"
+            android:singleLine="true"
+            android:text=""
+            android:textColor="@color/etTextColor"
+            android:textSize="@dimen/_14sdp" />
 
-                        <Button
-                            android:id="@+id/resetPassword"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/_10sdp"
-                            android:background="@drawable/curves_yellow_bg"
-                            android:contentDescription="@string/signIn"
-                            android:fontFamily="@font/cairo_semibold"
-                            android:text="@string/resetPassword"
-                            android:textAllCaps="false"
-                            android:textColor="@android:color/black"
-                            android:textSize="@dimen/_16sdp" />
+        <Button
+            android:id="@+id/resetPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:background="@drawable/curves_yellow_bg"
+            android:contentDescription="@string/signIn"
+            android:fontFamily="@font/cairo_semibold"
+            android:text="@string/resetPassword"
+            android:textAllCaps="false"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/_16sdp" />
 
 
-                    </LinearLayout>
+    </LinearLayout>
+
+
+</LinearLayout>
+
                 </LinearLayout>
 
 
