--- a/app/src/main/res/layout/activity_sign_in_screen.xml
+++ b/app/src/main/res/layout/activity_sign_in_screen.xml
@@ -31,8 +31,8 @@
                 android:orientation="vertical">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/_130sdp"
-                    android:layout_height="@dimen/_130sdp"
+                    android:layout_width="@dimen/_100sdp"
+                    android:layout_height="@dimen/_100sdp"
                     android:background="@android:color/white"
                     app:cardCornerRadius="@dimen/_20sdp"
                     android:layout_margin="@dimen/_10sdp"
@@ -86,7 +86,7 @@
                             android:drawablePadding="@dimen/_5sdp"
                             android:fontFamily="@font/cairo_semibold"
                             android:hint="@string/id"
-                            android:inputType="number"
+                            android:inputType="numberSigned"
                             android:padding="@dimen/_10sdp"
                             android:singleLine="true"
                             android:text=""
