--- a/app/src/main/res/layout/fragment_account_info.xml
+++ b/app/src/main/res/layout/fragment_account_info.xml
@@ -96,22 +96,20 @@
                 </androidx.cardview.widget.CardView>
 
 
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:weightSum="1"
-                    android:orientation="horizontal">
-
+                    android:orientation="horizontal"
+                    android:weightSum="1">
 
 
                     <EditText
-                        android:layout_marginEnd="@dimen/_5sdp"
-                        android:layout_weight=".5"
                         android:id="@+id/firstName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/_5sdp"
                         android:layout_marginBottom="@dimen/_10sdp"
+                        android:layout_weight=".5"
                         android:autofillHints="@string/id"
                         android:background="@drawable/curves_gray_bg"
                         android:drawableStart="@drawable/user_ic"
@@ -126,14 +124,15 @@
                         android:textColor="@color/etTextColor"
                         android:textSize="@dimen/_14sdp" />
 
+
                     <EditText
-                        android:layout_marginStart="@dimen/_5sdp"
                         android:id="@+id/lastName"
                         android:layout_width="match_parent"
-                        android:layout_weight=".5"
-
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_5sdp"
+
                         android:layout_marginBottom="@dimen/_10sdp"
+                        android:layout_weight=".5"
                         android:autofillHints="@string/id"
                         android:background="@drawable/curves_gray_bg"
                         android:drawableStart="@drawable/user_ic"
@@ -152,62 +151,92 @@
 
                 </LinearLayout>
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_gravity="start"
-                        android:layout_marginBottom="@dimen/_10sdp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:drawableStart="@drawable/ic_type"
-                            android:drawablePadding="@dimen/_5sdp"
-                            android:fontFamily="@font/cairo_semibold"
-                            android:text="@string/gender"
-                            android:textColor="@android:color/black"
-                            android:textSize="@dimen/_14sdp" />
-
-                        <TextView
-                            android:id="@+id/gender"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="start"
-                            android:fontFamily="@font/cairo_semibold"
-                            android:gravity="start"
-                            android:text="ذكر "
-                            android:textColor="@android:color/black"
-                            android:textSize="@dimen/_14sdp" />
-
-                    </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_gravity="start"
+                    android:layout_marginBottom="@dimen/_10sdp"
+                    android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/phone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_gravity="end"
-                        android:autofillHints="@string/phone"
-                        android:backgroundTint="@android:color/white"
-                        android:drawableStart="@drawable/phone_ic"
+                        android:drawableStart="@drawable/ic_type"
                         android:drawablePadding="@dimen/_5sdp"
                         android:fontFamily="@font/cairo_semibold"
-                        android:hint="@string/phone"
-                        android:inputType="phone"
-                        android:maxEms="11"
-                        android:maxLength="11"
-                        android:text="01124948662"
-                        android:textColor="@color/etTextColor"
+                        android:text="@string/gender"
+                        android:textColor="@android:color/black"
                         android:textSize="@dimen/_14sdp" />
 
-                </RelativeLayout>
 
+                    <RadioButton
+                        android:id="@+id/maleRB"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="true"
+                        android:fontFamily="@font/cairo_semibold"
+                        android:gravity="center"
+                        android:text="@string/male"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/_14sdp"
+                        android:textStyle="bold" />
+
+                    <RadioButton
+                        android:id="@+id/femaleRB"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_10sdp"
+                        android:layout_marginEnd="@dimen/_10sdp"
+                        android:fontFamily="@font/cairo_semibold"
+                        android:gravity="center"
+                        android:text="@string/female"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/_14sdp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+
+
+                    <TextView
+                        android:layout_gravity="start"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawableStart="@drawable/date_ic"
+                        android:drawablePadding="@dimen/_5sdp"
+                        android:fontFamily="@font/cairo_semibold"
+                        android:text="@string/age"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/_14sdp" />
+
+
+                <DatePicker
+                    android:id="@+id/datePicker"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:calendarViewShown="false"
+                    android:datePickerMode="spinner"
+                    android:spinnersShown="true"/>
+                <EditText
+                    android:id="@+id/phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/_10sdp"
+                    android:autofillHints="@string/phone"
+                    android:background="@drawable/curves_gray_bg"
+                    android:drawableStart="@drawable/phone_ic"
+                    android:drawablePadding="@dimen/_5sdp"
+                    android:gravity="start"
+                    android:hint="@string/phone"
+                    android:inputType="phone"
+                    android:maxEms="11"
+                    android:maxLength="11"
+                    android:padding="@dimen/_10sdp"
+                    android:text=""
+                    android:textColor="@color/etTextColor"
+                    android:textSize="@dimen/_14sdp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -346,6 +375,7 @@
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/_14sdp"
                         android:textStyle="bold" />
+
                     <androidx.appcompat.widget.AppCompatCheckBox
                         android:id="@+id/qadayaAllamayaCB"
                         android:layout_width="wrap_content"
@@ -357,6 +387,7 @@
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/_14sdp"
                         android:textStyle="bold" />
+
                     <androidx.appcompat.widget.AppCompatCheckBox
                         android:id="@+id/qadayaBenookCB"
                         android:layout_width="wrap_content"
@@ -368,6 +399,7 @@
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/_14sdp"
                         android:textStyle="bold" />
+
                     <androidx.appcompat.widget.AppCompatCheckBox
                         android:id="@+id/hegraCB"
                         android:layout_width="wrap_content"
@@ -379,6 +411,7 @@
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/_14sdp"
                         android:textStyle="bold" />
+
                     <androidx.appcompat.widget.AppCompatCheckBox
                         android:id="@+id/darayebCB"
                         android:layout_width="wrap_content"
@@ -390,6 +423,7 @@
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/_14sdp"
                         android:textStyle="bold" />
+
                     <androidx.appcompat.widget.AppCompatCheckBox
                         android:id="@+id/dawlyCB"
                         android:layout_width="wrap_content"
@@ -447,7 +481,6 @@
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:fontFamily="@font/cairo_semibold"
                     android:gravity="center"
-                    android:text="Error"
                     android:textColor="@android:color/holo_red_light"
                     android:textSize="@dimen/_10sdp"
                     android:visibility="visible" />
@@ -465,6 +498,7 @@
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/_16sdp"
                     android:textStyle="bold" />
+
             </LinearLayout>
 
 
