--- a/app/src/main/res/layout/fragment_new_news.xml
+++ b/app/src/main/res/layout/fragment_new_news.xml
@@ -14,35 +14,63 @@
 
         tools:context=".ui.home.fragment.news.fragment.New.NewNewsFragment">
 
-        <androidx.core.widget.NestedScrollView
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipe"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <LinearLayout
-                android:id="@+id/lin"
+            <androidx.core.widget.NestedScrollView
+                android:id="@+id/scroll"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="match_parent">
 
-                <include layout="@layout/news_item_model"  />
+                <LinearLayout
+                    android:id="@+id/lin"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                <include layout="@layout/news_item_model" />
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/newNewsRV"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp" />
 
-                <include layout="@layout/news_item_model" />
+                    <FrameLayout
+                        android:visibility="gone"
+                        android:id="@+id/noInternetLin"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/holo_red_dark"
+                        >
+                        <TextView
+                            android:padding="@dimen/_2sdp"
+                            android:gravity="center"
+                            android:textColor="@android:color/white"
+                            android:fontFamily="@font/cairo_semibold"
+                            android:textSize="@dimen/_10sdp"
+                            android:text="@string/noInternetConnection"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                        />
 
-                <include layout="@layout/news_item_model" />
 
-                <include layout="@layout/news_item_model" />
+                    </FrameLayout>
 
-                <include layout="@layout/news_item_model" />
+                    <ProgressBar
+                        android:visibility="gone"
+                        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
+                        android:id="@+id/progress"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
 
-                <include layout="@layout/news_item_model" />
+                </LinearLayout>
 
 
-            </LinearLayout>
+            </androidx.core.widget.NestedScrollView>
 
 
-        </androidx.core.widget.NestedScrollView>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     </RelativeLayout>
 </layout>
