--- a/app/src/main/res/layout/news_item_model.xml
+++ b/app/src/main/res/layout/news_item_model.xml
@@ -22,16 +22,19 @@
             android:orientation="vertical">
 
             <ImageView
+
                 android:id="@+id/newsImg"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@android:color/holo_green_dark" />
-
-            <FrameLayout
+                />
+            <ProgressBar
+                android:id="@+id/progressLoadPhoto"
+                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_70sdp"
-                android:layout_alignParentBottom="true"
-                android:background="@drawable/bottom_shadow" />
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true" />
+
+
 
         </RelativeLayout>
 
@@ -50,7 +53,6 @@
                 android:gravity="start"
                 android:maxLines="1"
                 android:padding="@dimen/_2sdp"
-                android:text=" بعد اعتراضات كبيرة.. الحكومة الفرنسية تسعى إلى تعديل مقترح قانون الأمن الشامل "
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/_10sdp"
                 android:textStyle="bold" />
@@ -65,7 +67,6 @@
                 android:gravity="start"
                 android:maxLines="2"
                 android:padding="@dimen/_2sdp"
-                android:text="اقترح وزير الداخلية الفرنسي جيرالد دارمانين، الخميس، إدراج تعديل يضمن حرية الصحافة في قانون الأمن الشامل المقترح والذي تم بحثه في الجمعية الوطنية بحسب ما أعلن عنه مصدر في دائرة الوزير"
                 android:textColor="@android:color/darker_gray"
                 android:textSize="@dimen/_8sdp"
                 android:textStyle="bold" />
@@ -81,7 +82,6 @@
                 android:fontFamily="@font/cairo_semibold"
                 android:gravity="end"
                 android:padding="@dimen/_2sdp"
-                android:text="21-12-2020 01:30 pm"
                 android:textColor="@android:color/darker_gray"
                 android:textSize="@dimen/_8sdp"
                 android:textStyle="bold" />
